tests/interp/bad/probe-no-axes.ngc
;All axes missing with motion code
g38.2 f1
